# cfddns

./: Cargo.toml  README.md
scripts/: list_dns_records.sh
src/: cloudflare_dns.rs  external_ip_addr.rs  main.rs
